<resources>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="error_title">Error</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="app_name">Plan My Shop</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_meal_plan">Meal Plan</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="title_recipe_editor">Edit Recipe</string>
    <string name="add_recipe_action_title">Add new recipe</string>
    <string name="add_all_to_list_action_title">Add all ingredients to list</string>
    <string name="delete_recipe_action_title">Delete recipes</string>
    <string name="default_rating">0</string>
    <string name="show_advanced_search_prompt">Advanced search ▼</string>
    <string name="hide_advanced_search_prompt">Hide ▲</string>
    <string name="search_criteria_heading">Search by</string>
    <string-array name="search_criteria_options">
        <item>Recipe name</item>
        <item>Includes ingredient/s</item>
        <item>Includes tag/s</item>
    </string-array>
    <string name="order_by_heading">Order by</string>
    <string-array name="order_by_options">
        <item>Recipe name A-Z</item>
        <item>Prep time</item>
        <item>Total time</item>
        <item>Person 1\'s rating</item>
        <item>Person 2\'s rating</item>
        <item>Combined rating</item>
    </string-array>
    <string name="ingredient_search_hint">Enter one or more ingredients separated by commas</string>
    <string name="tag_search_hint">Enter one or more tags separated by commas</string>
    <string name="delete_recipes_warning_title">Delete recipes</string>
    <string name="delete_warning_prompt1">Are you sure you want to permanently delete</string>
    <string name="delete_warning_prompt2">recipe/s?</string>
    <string name="no_recipes_message">Your recipe book is empty!\n\nYou can add recipes here to browse through for future meal planning, and easily add all ingredients from a recipe straight to your shopping list.\n\nAdd recipes by clicking the \"+\" icon in the top right of this screen.</string>
    <string name="content_description_clear_search">Clear search bar</string>
    <string name="searchbar_name_hint">Recipe name…</string>
    <string name="searchbar_ingredient_hint">ingredient1,  ingredient2,   …</string>
    <string name="searchbar_tag_hint">tag1,   tag2,   …</string>
    <string name="error_deleting_recipes">Error - something went wrong when trying to delete recipes.\nPlease try again in a few minutes.</string>
    <string name="create_recipe_title">Create New Recipe</string>
    <string name="create_recipe_preamble_1_1">Enter a link to prefill a recipe from.</string>
    <string name="create_recipe_preamble_1_2">A new recipe will be generated and prefilled using any ingredients and other details from that webpage.</string>
    <string name="supported_recipes"><![CDATA[
    <b>Currently supported websites:</b><br>
    • <a href="https://www.recipetineats.com/">RecipeTin Eats</a><br>
    • <a href="https://www.hellofresh.com.au/recipes/">Hello Fresh</a><br>
    • <a href="https://www.taste.com.au/">Taste.com.au</a>
    ]]></string>
    <string name="recipe_website_hint">Paste in link to recipe here…</string>
    <string name="create_recipe_website_button">Prefill recipe from website</string>
    <string name="or_separator">OR</string>
    <string name="create_recipe_preamble_2">Create a new recipe manually by clicking the button below.</string>
    <string name="create_recipe_manual_button">Create recipe from scratch</string>
    <string name="recipe_url_empty">Please enter a website to create a recipe from</string>
    <string name="recipe_url_invalid">The website you have provided is not a valid url. Be sure to include the full \"https://www.\" address.</string>
    <string name="recipe_url_unsupported">The website you have provided is not currently supported. Check the list below for supported sites.</string>
    <string name="recipe_url_error">Error - a recipe could not be read from this website. Please check the link you\'ve provided.</string>
    <string name="recipe_url_timeout_error">Error - website too long to respond. Check your internet connection and try again.</string>
    <string name="edit_recipe_action_title">Edit</string>
    <string name="view_recipe_website_button">View recipe online</string>
    <string name="default_url_button_text">No website linked</string>
    <string name="prep_time_heading_short">Prep:</string>
    <string name="cook_time_heading_short">Cook:</string>
    <string name="abbreviated_time_unit">mins</string>
    <string name="default_notes_text">You\'ve not written any notes for this recipe.</string>
    <string name="add_all_ingredients_toast">All selected ingredients added to shopping list.</string>
    <string name="add_all_ingredients_dialog_title">Confirm</string>
    <string name="add_all_ingredients_dialog">Add all selected ingredients from this recipe to your shopping list?</string>
    <string name="add_all_ingredients_dialog_positive_button">Yes</string>
    <string name="add_all_ingredients_dialog_negative_button">Cancel</string>
    <string name="edit_mode_title">Editing recipe</string>
    <string name="ingredients_heading">Ingredients</string>
    <string name="edit_ingredient_hint">Tap and hold an ingredient below to edit it.</string>
    <string name="notes_heading">Notes</string>
    <string name="url_heading">Website link:</string>
    <string name="prep_time_heading">Prep time (minutes):</string>
    <string name="cook_time_heading">Cooking time (minutes):</string>
    <string name="tags_heading">Tags:</string>
    <string name="tags_hint">Add tag…</string>
    <string name="change_serves_hint">Changing serves will ask if you also want to change all ingredients\' quantities to match.</string>
    <string name="change_serves_dialog_message">You changed the number of serves from %1$d to %2$d. Do you want to update the quantity of all ingredients to match this?</string>
    <string name="change_serves_dialog_title">Update ingredient quantities</string>
    <string name="recipe_name_placeholder">Recipe name…</string>
    <string name="add_ingredient_placeholder">New ingredient…</string>
    <string name="recipe_notes_placeholder">Enter any other notes about your recipe…</string>
    <string name="recipe_url_placeholder">Enter link to online recipe…</string>
    <string name="add_ingredient_button">Add</string>
    <string name="save_recipe_button">Save</string>
    <string name="save_recipe_toast">Recipe saved.</string>
    <string name="default_recipe_name">Untitled Recipe</string>
    <string name="save_recipe_prompt_title">Save changes to recipe?</string>
    <string name="save_recipe_prompt_message">Do you wish to save any changes you may have just made to this recipe?</string>
    <string name="save_recipe_prompt_positive_button">Save changes</string>
    <string name="save_recipe_prompt_negative_button">Discard changes</string>
    <string name="content_description_add_ingredient_button">Add ingredient</string>
    <string name="content_description_clock_icon">clock icon</string>
    <string name="recipe_no_ingredients_placeholder_view_mode">This recipe has no ingredients yet.\nAdd some by clicking the edit icon (pen) in the top right corner of your screen to edit the recipe.</string>
    <string name="recipe_no_ingredients_placeholder_edit_mode">This recipe has no ingredients yet.\nAdd some using the box above.
        \n\nHint: you can copy/paste in a list of ingredients at once, as long as each ingredient is on a separate line.</string>
    <string name="error_recipe_name_already_used">This recipe name is already in use - please choose another.</string>
    <string name="error_no_recipe_name_entered">Please enter a name for this recipe</string>
    <string name="error_adding_recipe_to_meal">Something went wrong trying to add the recipe to this meal - please try again later.</string>
    <string name="error_loading_tags">Error - unable to load tags for recipe.</string>
    <string name="error_serves_cant_be_negative">Number of serves cannot be 0 or negative.</string>
    <string name="recipe_prefill_preamble">A recipe has been created and prefilled successfully. However, you should check to make sure all details are consistent and make sense before clicking \"SAVE\".
        \n\nTIPS
    </string>
    <string name="general_new_recipe_hints">\n\n• Try to use generic ingredient names, e.g. \"coriander\" instead of \"roughly chopped fresh coriander.\" Consistent naming allows ingredients to have their quantities combined when added to your shopping list from different recipes, and makes it easier to search recipes by ingredients.</string>
    <string name="recipe_prefill_hints_general">\n\n• Delete any ingredients you wouldn\'t add to a shopping list, e.g. \"salt and pepper\".
        \n\n• Some ingredients may have had a substitute or alternative name listed. Edit these ingredients to include only the one you will use.</string>
    <string name="recipe_prefill_hints_recipe_tin_eats">
        \n\n• Check for multiple ingredients in one line, and add a separate ingredient for each instead.
        \n\n• Check for ingredients with a range of quantities, (e.g. \"13-16\") and edit them to choose one.
        \n\n• Ingredient names beginning with \"[EDIT_ME]\" were unable to be understood. Please edit and simplify them.
    </string>
    <string name="recipe_prefill_hints_hello_fresh">\n\n• Quantities of HelloFresh recipes often tend to be in "packets" or similar ambiguous units. These will be counted as part of the ingredient\'s name, so you might want to try and replace these with a weight/volume measurement so they can be consistent with other recipes.
    </string>
    <string name="select_meal_title">Select a meal</string>
    <string name="replace_meal_button_override">Replace it</string>
    <string name="replace_meal_button_move">Move it to another recipe</string>
    <string name="replace_meal_prompt_title">Replace existing meal</string>
    <string name="replace_meal_button_keep">Keep it</string>
    <string name="new_list_item_field_placeholder">New item/s…</string>
    <string name="clear_checked_list_items_title">Clear crossed-off items</string>
    <string name="clear_all_list_items_title">Clear ALL items</string>
    <string name="serves_heading">Serves:</string>
    <string name="copy_list_to_clipboard">Copy list to clipboard</string>
    <string name="save_all_to_recipe_book_button">Save all to recipe book</string>
    <string name="import_recipes_help">The recipes below have been shared with you. To add them to your recipe book, simply click the \"Save All\" button below.\n\nIf you want to add any custom tags to these recipes to help identify them, enter them below BEFORE clicking ths \"Save All\" button.</string>
    <string name="import_tags_heading">These tags will be added to all recipes below:</string>
    <string name="no_tags_placeholder">No tags set.</string>
    <string name="shared_recipes_heading">Shared Recipes</string>
    <string name="action_open_favourites">View favourite items</string>
    <string name="favourite_items_help">Save your regular shopping list items here to quickly add some or all of them again in the future.
    \n\nAdd some favourites by clicking the \"Add favourites items\" button above.
    \n\nAny time you want to quickly add these items to your shopping list again, return to this page and click \"Add all\", or click the individual buttons next to each item to add only some.</string>
    <string name="new_list_item_button_verbose">Add favourites items</string>
    <string name="add_all_to_shopping_list_button">Add all to shopping list</string>
</resources>