<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_open_favourites"
        android:title="@string/action_open_favourites"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/share_list"
        android:title="@string/copy_list_to_clipboard"
        android:icon="@drawable/ic_baseline_share_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_clear_checked_list_items"
        android:title="@string/clear_checked_list_items_title"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_clear_all_list_items"
        android:title="@string/clear_all_list_items_title"
        app:showAsAction="never"
        />
</menu>