<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="8dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_recipes_help"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/import_tags_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_tags_heading"
        android:textSize="18sp"
        android:layout_marginEnd="4dp"
        android:layout_gravity="center_vertical"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleLine="false" />

    <TextView
        android:id="@+id/no_tags_placeholder"
        style="@style/hintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_tags_placeholder"
        android:textAlignment="center"
        android:textSize="16sp"/>


    <LinearLayout
        android:id="@+id/add_tag_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/edit_text_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:completionThreshold="1"
            android:ems="10"
            android:hint="@string/tags_hint"
            android:inputType="textCapSentences"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/add_tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredient_button"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_save_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_all_to_recipe_book_button" />

    <TextView
        android:id="@+id/shared_recipes_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shared_recipes_heading"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_vertical"
        android:textStyle="bold" />
</LinearLayout>
