<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:importantForAutofill="no">

        <LinearLayout
            android:id="@+id/action_buttons_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_add_to_meal_plan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:icon="@drawable/ic_add_to_meal_plan"
                app:iconGravity="start"
                android:text="Add to meal plan"
                android:layout_marginEnd="2dp"/>

            <Button
                android:id="@+id/button_add_to_shopping_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:icon="@drawable/add_to_list_drawable_ic"
                app:iconGravity="start"
                android:text="Add to shopping list"
                android:layout_marginStart="2dp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/recipe_name_placeholder"
            android:inputType="text|textCapSentences"
            android:textSize="24sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/ingredients_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ingredients_heading"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ingredient_editor_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_text_ingredient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/add_ingredient_placeholder"
                android:inputType="textMultiLine|text|textCapSentences"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/recipe_add_ingredient_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_add_ingredient_button"
                android:text="@string/add_ingredient_button" />

        </LinearLayout>


        <TextView
            android:id="@+id/textview_no_ingredients_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/recipe_no_ingredients_placeholder_view_mode"
            android:textSize="18sp"
            android:textAlignment="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/edit_ingredients_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_ingredient_hint"
            style="@style/hintText"
            android:textAlignment="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_ingredients_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/ingredient_list_item">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/tags_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tags_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tags_heading"
                android:textSize="18sp"
                android:layout_marginEnd="4dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/recipe_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleLine="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_tag_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/edit_text_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:completionThreshold="1"
                android:ems="10"
                android:hint="@string/tags_hint"
                android:inputType="textCapSentences"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/add_tag_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_ingredient_button"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/serves_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/serves_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/serves_heading"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_tag" />

            <TextView
                android:id="@+id/text_view_serves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                tools:text="20"
                android:minHeight="48dp"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/edit_text_serves"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center"
                android:inputType="number"
                android:textSize="18sp"
                tools:text="20" />
        </LinearLayout>
        <TextView
            android:id="@+id/serves_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/hintText"
            android:textAlignment="center"
            android:text="@string/change_serves_hint"
            />

        <LinearLayout
            android:id="@+id/prep_and_cook_time_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/clock_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/content_description_clock_icon"
                app:srcCompat="@drawable/ic_baseline_access_time_24" />

            <TextView
                android:id="@+id/prep_time_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/prep_time_heading_short"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_prep_time"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:textSize="18sp"
                tools:text="290" />

            <EditText
                android:id="@+id/edit_text_prep_time"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textSize="18sp"
                tools:text="290"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/prep_time_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/abbreviated_time_unit"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cook_time_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/cook_time_heading_short"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_cook_time"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textSize="18sp"
                tools:text="290"
                tools:visibility="gone"/>

            <TextView
                android:id="@+id/text_view_cook_time"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:textSize="18sp"
                tools:text="290" />

            <TextView
                android:id="@+id/cook_time_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/abbreviated_time_unit"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tiernan_rating_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tiernan_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_tiernan_face" />

            <RatingBar
                android:id="@+id/tiernan_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:ignore="SpeakableTextPresentCheck"
                tools:rating="1.5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tom_rating_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tom_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_tom_face" />

            <RatingBar
                android:id="@+id/tom_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:isIndicator="true"
                tools:rating="3.5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/url_editor_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/url_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url_heading"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:autofillHints="uri"
                android:ems="10"
                android:hint="@string/recipe_url_placeholder"
                android:inputType="textUri|text" />

        </LinearLayout>

        <Button
            android:id="@+id/recipe_url_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/view_recipe_website_button"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />


        <TextView
            android:id="@+id/recipe_notes_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/notes_heading"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipe_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="18sp"
            tools:text="Notes about the recipe\nOver multiple lines." />

        <EditText
            android:id="@+id/edit_text_recipe_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/recipe_notes_placeholder"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="18sp"
            tools:text="Notes about the recipe\nOver multiple lines." />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>